Closes #814 - fixes contrast of featured tag for sticky posts.

--- a/sophisticated-business/style.css
+++ b/sophisticated-business/style.css
@@ -2286,7 +2286,7 @@ body.page .main-navigation {
 
 .sticky-post {
   background: #caab57;
-  color: #fff;
+  color: #080808;
   display: inline-block;
   font-weight: bold;
   line-height: 1;
